--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: package:analysis_options/analysis_options.yaml
+
+linter:
+  rules:
+    always_use_package_imports: false
+    avoid_classes_with_only_static_members: false
