--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,8 +9,13 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
   stylish:
     path: ../
 
 dev_dependencies:
   analysis_options: ^2.0.1
+
+flutter:
+  uses-material-design: true
